fixed alignment issues on mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@ $color: (
   primaryDark: #231f34,
   secondary: #ffffff,
   blueAccent: #343dfd,
+  blueAccentBackground: #d3d5ff94,
   redAccent: #f61067,
   redAccent80: rgba(246, 16, 103, 0.8),
   greenAccent: #44cf6c,
@@ -98,7 +99,7 @@ ul {
 .nav-bar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   overflow: hidden;
   background: rgba(39, 35, 58, 0.6);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -107,17 +108,15 @@ ul {
 
   .logo {
     font-size: 1rem;
+    margin-left: 20px;
     color: map-get($color, greenAccent);
     align-self: center;
-    margin-left: 20px;
 
     @include xl {
-      margin-left: 5rem;
       font-size: 1rem;
     }
 
     @include xxl {
-      margin-left: 10rem;
       font-size: 1.2rem;
     }
   }
@@ -303,27 +302,24 @@ ul {
     animation-fill-mode: forwards;
   }
 }
-
+section {
+  padding-bottom: 4rem;
+}
 // First section of website
 .landing-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
-  align-content: center;
-
-  .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
 
   .landing-left {
     display: flex;
     flex-direction: column;
-    margin: 0 5rem;
-    justify-content: center;
+    height: fit-content;
+    justify-self: center;
+    align-content: center;
+    margin: 20px;
+
     h1 {
       font-size: 2.5rem;
       max-width: 720px;
@@ -358,8 +354,6 @@ ul {
       }
     }
     @include xxl {
-      margin-left: 10rem;
-
       h1 {
         font-size: 4rem;
       }
@@ -397,12 +391,18 @@ ul {
       }
     }
   }
+
+  @include lg {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 // Animation of the underline on the headerline
 .underline {
   border-top: 4px solid map-get($color, blueAccent);
-  animation: draw-line 5s;
+  animation: draw-line 2.5s;
   animation-fill-mode: forwards;
 }
 
@@ -501,19 +501,19 @@ ul {
 #red-triangle {
   transform: translateY(-500px), rotate(0deg);
   opacity: 0;
-  animation: redTriangle 2s 2s linear forwards;
+  animation: redTriangle 1s 1s ease-out forwards;
 }
 
 #green-triangle {
   transform: translateY(-500px), rotate(0deg);
   opacity: 0;
-  animation: greenTriangle 2s 1s linear forwards;
+  animation: greenTriangle 1s 0.5s ease-out forwards;
 }
 
 #blue-triangle {
   transform: translateY(-500px), rotate(0deg);
   opacity: 0.85;
-  animation: blueTriangle 2s forwards linear;
+  animation: blueTriangle 1s forwards ease-out;
 }
 
 @keyframes blueTriangle {
@@ -568,10 +568,11 @@ ul {
 
 .section-header {
   width: fit-content;
-  margin-top: 50px;
-  margin-left: 40px;
+  margin: 4rem 0rem;
+  margin-left: 20px;
   border-bottom: 2px solid map-get($color, redAccent);
   font-size: 1.2rem;
+  align-self: flex-start;
 
   @include lg {
     margin-left: 15%;
@@ -586,10 +587,10 @@ ul {
 
 .project-title {
   width: fit-content;
-  margin: 20px;
-  font-size: 3rem;
+  margin: 2rem;
+  margin-left: 10px;
+  font-size: 2rem;
   color: map-get($color, blueAccent);
-  margin-left: 40px;
 
   @include lg {
     margin-left: 0px;
@@ -636,6 +637,7 @@ ul {
       text-align: center;
       color: white;
       font-size: 1rem;
+      cursor: context-menu;
     }
 
     li:first-child {
@@ -649,6 +651,7 @@ ul {
 
 .text {
   padding: 10px;
+  margin-bottom: 2rem;
 }
 
 .project-link {
@@ -656,10 +659,13 @@ ul {
   padding-left: 10px;
   cursor: pointer;
   font-weight: 600;
+  margin-bottom: 2rem;
 }
 
 .past-project-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   height: fit-content;
 
@@ -668,72 +674,66 @@ ul {
   }
 }
 
-.project-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: fit-content;
-
-  .project-title {
-    align-self: flex-start;
-  }
-  @include lg {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 0.1fr 0.9fr;
-    grid-row-gap: 2rem;
-    margin-bottom: 2rem;
-    min-height: 800px;
-    width: 70%;
-
-    .card {
-      height: fit-content;
-    }
-  }
-}
-
 .image-container {
   display: flex;
-  flex-direction: column;
-  width: fit-content;
+  width: 90%;
+  margin: 2rem 0rem;
+  padding: 2rem;
+  justify-content: center;
+  align-items: center;
+  background-color: map-get($color, blueAccentBackground);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(8.5px);
   border-radius: 10px;
-  overflow: hidden;
-  justify-self: flex-end;
-  align-self: flex-end;
-  height: fit-content;
-  margin-bottom: 2rem;
+
   img {
-    width: 300px;
-    height: 550px;
-
-    @include lg {
-      width: 350px;
-      height: 650px;
-    }
+    width: 40%;
+    object-fit: fill;
+    max-width: 400px;
+    border-radius: 10px;
+    overflow: hidden;
   }
 
-  .gamer-img {
-    width: 100%;
-    height: 300px;
-
-    @include lg {
-      height: 50%;
-    }
+  .img1 {
+    transform: rotate(-5deg);
+    z-index: 2;
   }
 
-  @include lg {
-    grid-column: 2;
-    grid-row: 1 / span 2;
-    justify-self: flex-end;
-    align-self: flex-end;
+  .img2 {
+    transform: rotate(8deg);
+    z-index: 0;
   }
 
-  @include xl {
-    .gamer-img {
-      height: 400px;
-    }
+  .shadow-layer {
+    position: absolute;
+    width: 20%;
+    top: 40px;
+    max-width: 350px;
+    height: 80%;
+    max-height: 800px;
+    background-color: #202020;
+    opacity: 40%;
+    filter: blur(10px);
+    border-radius: 30px;
+    z-index: 1;
+    transform: rotate(-5deg);
+  }
+
+  .shadow-layer2 {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 20%;
+    max-width: 350px;
+    height: 80%;
+    max-height: 800px;
+    background-color: #202020;
+    opacity: 40%;
+    filter: blur(10px);
+    border-radius: 30px;
+    z-index: -1;
+    transform: rotate(8deg);
   }
 }
 
@@ -741,6 +741,7 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-bottom: 2rem;
 
   li {
     color: white;
@@ -770,12 +771,16 @@ ul {
   flex-direction: column;
   align-items: center;
 
+  .section-header {
+    color: white;
+    margin-bottom: 0;
+  }
   .card {
-    margin-top: 50px;
+    margin-top: 2rem;
   }
 
   .card:last-child {
-    margin-bottom: 50px;
+    margin-bottom: 2rem;
   }
 
   @include lg {
@@ -798,30 +803,14 @@ ul {
 
 .education-container {
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  justify-items: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
-}
 
-// Contact section
-
-.contact-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-
-  div {
-    width: fit-content;
-    justify-content: center;
-
-    p {
-      color: white;
-    }
-  }
-  a {
+  .section-header {
+    justify-self: flex-start;
+    color: white;
     width: fit-content;
   }
 }
